@@ -1,3 +1,7 @@
+2004-10-22 Oliver Brakmann <oliverbrakmann@users.berlios.de>
+
+	* scripts/pkginfo.in: Written.
+
 2004-10-20 Gareth Jones <gareth_jones@users.berlios.de>
 
 	* scripts/libprometheus.bash.in: Added quotes around echoed variables in
@@ -17,7 +21,7 @@
 
 2004-09-26 Oliver Brakmann <oliverbrakmann@users.berlios.de>
 
-	* docs/*, scripts/*: Changed the short option equivalent of
+	* man/*, scripts/*: Changed the short option equivalent of
 	  --version to '-V' instead of '-v'.
 
 2004-09-23 Gareth Jones <gareth_jones@users.berlios.de>
